// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography renders 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Using variant no overrides 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  -webkit-letter-spacing: -0.01562em;
  -moz-letter-spacing: -0.01562em;
  -ms-letter-spacing: -0.01562em;
  letter-spacing: -0.01562em;
  line-height: 1;
  font-size: 6rem;
  font-weight: 300;
}

<span
  class="c0"
  letter-spacing="-0.01562em"
>
  Content
</span>
`;

exports[`Using variant with overrides 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  -webkit-letter-spacing: -0.01562em;
  -moz-letter-spacing: -0.01562em;
  -ms-letter-spacing: -0.01562em;
  letter-spacing: -0.01562em;
  line-height: 4;
  font-size: 6rem;
  font-weight: 300;
}

<h1
  class="c0"
  letter-spacing="-0.01562em"
>
  Content
</h1>
`;
